--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,27 @@
 /Journal.Application/Journal_Persistence.SQL/obj
 /Journal.Application/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfo.cs
 /Journal.Application/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfoInputs.cache
+/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/CodeChunks.db-shm
+/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/CodeChunks.db-wal
+/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/SemanticSymbols.db-shm
+/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/SemanticSymbols.db-wal
+/Journal.Presentation/Journal.API/.vs/Journal.API/DesignTimeBuild/.dtbcache.v2
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/28b04f05-7850-4bdf-928c-306c0534edb6.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/306e6873-7894-42d9-bca8-e359059fac6a.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/31113b5d-a091-4053-8f38-5d45483b95ba.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/346be81b-e91f-4fdd-b660-2b9911a2dca7.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/45cf35b3-dfe2-4d17-b402-cb1f60a0f2e6.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/5824ec20-f878-48b3-95a1-b880db7d4a29.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/850dd101-6b20-4f6a-9f97-7af582f4cd6d.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/986911e7-ebcc-4f6c-be01-a0b934ed1311.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/cf7a9dcd-d824-4531-bd79-63641f804d52.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/v17/.suo
+/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfo.cs
+/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfoInputs.cache
+/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.assets.cache
+/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.GeneratedMSBuildEditorConfig.editorconfig
+/Journal.Presentation/Journal.API/obj/Debug/net9.0/rpswa.dswa.cache.json
+/Journal.Presentation/Journal.API/obj/Journal.API.csproj.nuget.dgspec.json
+/Journal.Presentation/Journal.API/obj/project.assets.json
+/Journal.Presentation/Journal.API/obj/project.nuget.cache
+/Journal.Presentation/Journal.API/CLAUDE.md
