--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@
 /Journal.Presentation/Journal.API/obj/project.assets.json
 /Journal.Presentation/Journal.API/obj/project.nuget.cache
 /Journal.Presentation/Journal.API/CLAUDE.md
+/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/43cb8b82-0287-4824-a0c0-3944ed5dc2df.vsidx
+/Journal.Presentation/Journal.API/.vs/Journal.API/v17/DocumentLayout.backup.json
+/Journal.Presentation/Journal.API/.vs/Journal.API/v17/DocumentLayout.json
