--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,22 @@
 /Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/43cb8b82-0287-4824-a0c0-3944ed5dc2df.vsidx
 /Journal.Presentation/Journal.API/.vs/Journal.API/v17/DocumentLayout.backup.json
 /Journal.Presentation/Journal.API/.vs/Journal.API/v17/DocumentLayout.json
+/Journal.Application/Journal_Application/bin/Debug/net9.0
+/Journal.DataLayer/Journal_MigrationsHandler/bin/Debug/net9.0
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/ref
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/refint
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.AssemblyInfo.cs
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.AssemblyInfoInputs.cache
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.assets.cache
+*.cache
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.csproj.FileListAbsolute.txt
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.dll
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.GeneratedMSBuildEditorConfig.editorconfig
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.pdb
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.sourcelink.json
+/Journal.DataLayer/Journal_MigrationsHandler/obj/Journal_MigrationsHandler.csproj.nuget.dgspec.json
+/Journal.DataLayer/Journal_MigrationsHandler/obj/project.assets.json
+/Journal.DataLayer/Journal_MigrationsHandler/obj/project.nuget.cache
+/Journal.DataLayer/Journal_Persistence.SQL/bin/Debug/net9.0
+/Journal.DataLayer/Journal_Persistence.SQL/obj/Debug/net9.0/ref
+/Journal.DataLayer/Journal_Persistence.SQL/obj/Debug/net9.0/refint
