--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,353 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
 
-/Journal.API/appsettings.json
-/Journal.API/appsettings.Development.json
-/.vs
-/Journal.API/obj
-/Journal.API/.vs/Journal.API
-/Journal.Application/Journal.API/.vs
-/Journal.Application/Journal_Application/obj
-/Journal.Application/Journal_Domain/obj
-/Journal.Application/Journal_MigrationsHandler/obj
-/Journal.Application/Journal_Persistence.SQL/obj
-/Journal.Application/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfo.cs
-/Journal.Application/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfoInputs.cache
-/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/CodeChunks.db-shm
-/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/CodeChunks.db-wal
-/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/SemanticSymbols.db-shm
-/Journal.Presentation/Journal.API/.vs/Journal.API/CopilotIndices/17.14.827.52834/SemanticSymbols.db-wal
-/Journal.Presentation/Journal.API/.vs/Journal.API/DesignTimeBuild/.dtbcache.v2
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/28b04f05-7850-4bdf-928c-306c0534edb6.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/306e6873-7894-42d9-bca8-e359059fac6a.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/31113b5d-a091-4053-8f38-5d45483b95ba.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/346be81b-e91f-4fdd-b660-2b9911a2dca7.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/45cf35b3-dfe2-4d17-b402-cb1f60a0f2e6.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/5824ec20-f878-48b3-95a1-b880db7d4a29.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/850dd101-6b20-4f6a-9f97-7af582f4cd6d.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/986911e7-ebcc-4f6c-be01-a0b934ed1311.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/cf7a9dcd-d824-4531-bd79-63641f804d52.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/v17/.suo
-/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfo.cs
-/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.AssemblyInfoInputs.cache
-/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.assets.cache
-/Journal.Presentation/Journal.API/obj/Debug/net9.0/Journal.API.GeneratedMSBuildEditorConfig.editorconfig
-/Journal.Presentation/Journal.API/obj/Debug/net9.0/rpswa.dswa.cache.json
-/Journal.Presentation/Journal.API/obj/Journal.API.csproj.nuget.dgspec.json
-/Journal.Presentation/Journal.API/obj/project.assets.json
-/Journal.Presentation/Journal.API/obj/project.nuget.cache
-/Journal.Presentation/Journal.API/CLAUDE.md
-/Journal.Presentation/Journal.API/.vs/Journal.API/FileContentIndex/43cb8b82-0287-4824-a0c0-3944ed5dc2df.vsidx
-/Journal.Presentation/Journal.API/.vs/Journal.API/v17/DocumentLayout.backup.json
-/Journal.Presentation/Journal.API/.vs/Journal.API/v17/DocumentLayout.json
-/Journal.Application/Journal_Application/bin/Debug/net9.0
-/Journal.DataLayer/Journal_MigrationsHandler/bin/Debug/net9.0
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/ref
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/refint
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.AssemblyInfo.cs
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.AssemblyInfoInputs.cache
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.assets.cache
-*.cache
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.csproj.FileListAbsolute.txt
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.dll
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.GeneratedMSBuildEditorConfig.editorconfig
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.pdb
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Debug/net9.0/Journal_MigrationsHandler.sourcelink.json
-/Journal.DataLayer/Journal_MigrationsHandler/obj/Journal_MigrationsHandler.csproj.nuget.dgspec.json
-/Journal.DataLayer/Journal_MigrationsHandler/obj/project.assets.json
-/Journal.DataLayer/Journal_MigrationsHandler/obj/project.nuget.cache
-/Journal.DataLayer/Journal_Persistence.SQL/bin/Debug/net9.0
-/Journal.DataLayer/Journal_Persistence.SQL/obj/Debug/net9.0/ref
-/Journal.DataLayer/Journal_Persistence.SQL/obj/Debug/net9.0/refint
+# Visual Studio 2015/2017 cache/options directory
+.vs/
+# Uncomment if you have tasks that create the project's static files in wwwroot
+#wwwroot/
+
+# Visual Studio 2017 auto generated files
+Generated\ Files/
+
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
+# NUnit
+*.VisualState.xml
+TestResult.xml
+nunit-*.xml
+
+# Build Results of an ATL Project
+[Dd]ebugPS/
+[Rr]eleasePS/
+dlldata.c
+
+# Benchmark Results
+BenchmarkDotNet.Artifacts/
+
+# .NET Core
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# StyleCop
+StyleCopReport.xml
+
+# Files built by Visual Studio
+*_i.c
+*_p.c
+*_h.h
+*.ilk
+*.meta
+*.obj
+*.iobj
+*.pch
+*.pdb
+*.ipdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*_wpftmp.csproj
+*.log
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.svclog
+*.scc
+
+# Chutzpah Test files
+_Chutzpah*
+
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
+
+# Visual Studio profiler
+*.psess
+*.vsp
+*.vspx
+*.sap
+
+# Visual Studio Trace Files
+*.e2e
+
+# TFS 2012 Local Workspace
+$tf/
+
+# Guidance Automation Toolkit
+*.gpState
+
+# ReSharper is a .NET coding add-in
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
+
+# TeamCity is a build add-in
+_TeamCity*
+
+# DotCover is a Code Coverage Tool
+*.dotCover
+
+# AxoCover is a Code Coverage Tool
+.axoCover/*
+!.axoCover/settings.json
+
+# Coverlet is a free, cross platform Code Coverage Tool
+coverage*.json
+coverage*.xml
+coverage*.info
+
+# Visual Studio code coverage results
+*.coverage
+*.coveragexml
+
+# NCrunch
+_NCrunch_*
+.*crunch*.local.xml
+nCrunchTemp_*
+
+# MightyMoose
+*.mm.*
+AutoTest.Net/
+
+# Web workbench (sass)
+.sass-cache/
+
+# Installshield output folder
+[Ee]xpress/
+
+# DocProject is a documentation generator add-in
+DocProject/buildhelp/
+DocProject/Help/*.HxT
+DocProject/Help/*.HxC
+DocProject/Help/*.hhc
+DocProject/Help/*.hhk
+DocProject/Help/*.hhp
+DocProject/Help/Html2
+DocProject/Help/html
+
+# Click-Once directory
+publish/
+
+# Publish Web Output
+*.[Pp]ublish.xml
+*.azurePubxml
+# Note: Comment the next line if you want to checkin your web deploy settings,
+# but database connection strings (with potential passwords) will be unencrypted
+*.pubxml
+*.publishproj
+
+# Microsoft Azure Web App publish settings. Comment the next line if you want to
+# checkin your Azure Web App publish settings, but sensitive information contained
+# in these files may be disclosed.
+*.azurePubxml
+
+# Microsoft Azure Build Output
+csx/
+*.build.csdef
+
+# Microsoft Azure Emulator
+ecf/
+rcf/
+
+# Windows Store app package directories and files
+AppPackages/
+BundleArtifacts/
+Package.StoreAssociation.xml
+_pkginfo.txt
+*.appx
+*.appxbundle
+*.appxupload
+
+# Visual Studio cache files
+# files ending in .cache can be ignored
+*.[Cc]ache
+# but keep track of directories ending in .cache
+!?*.[Cc]ache/
+
+# Others
+ClientBin/
+~$*
+*~
+*.dbmdl
+*.dbproj.schemaview
+*.jfm
+*.pfx
+*.publishsettings
+orleans.codegen.cs
+
+# Including strong name files can present a security risk
+# (https://github.com/github/gitignore/pull/2483#issue-259490424)
+#*.snk
+
+# Since there are multiple workflows, uncomment the next line to ignore bower_components
+# (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
+#bower_components/
+
+# RIA/Silverlight projects
+Generated_Code/
+
+# Backup & report files from converting an old project file
+# to a newer Visual Studio version. Backup files are not needed,
+# because we have git ;-)
+_UpgradeReport_Files/
+Backup*/
+UpgradeLog*.XML
+UpgradeLog*.htm
+CSharpUpgradeLog*.XML
+
+# SQL Server files
+*.mdf
+*.ldf
+*.ndf
+
+# Business Intelligence projects
+*.rdl.data
+*.bim.layout
+*.bim_*.settings
+*.rptproj.rsuser
+*- [Bb]ackup.rdl
+*- [Bb]ackup ([0-9]).rdl
+*- [Bb]ackup ([0-9][0-9]).rdl
+
+# Microsoft Fakes
+FakesAssemblies/
+
+# GhostDoc plugin setting file
+*.GhostDoc.xml
+
+# Node.js Tools for Visual Studio
+.ntvs_analysis.dat
+node_modules/
+
+# Visual Studio 6 build log
+*.plg
+
+# Visual Studio 6 workspace options file
+*.opt
+
+# Visual Studio 6 workspace options file (contains which files were open etc.)
+*.vbw
+
+# Visual Studio LightSwitch build output
+**/*.HTMLClient/GeneratedArtifacts
+**/*.DesktopClient/GeneratedArtifacts
+**/*.DesktopClient/ModelManifest.xml
+**/*.Server/GeneratedArtifacts
+**/*.Server/ModelManifest.xml
+_Pvt_Extensions
+
+# Paket dependency manager
+.paket/paket.exe
+paket-files/
+
+# FAKE - F# Make
+.fake/
+
+# CodeRush personal settings
+.cr/personal
+
+# Python Tools for Visual Studio (PTVS)
+__pycache__/
+*.pyc
+
+# Cake - Uncomment if you are using it
+# tools/**
+# !tools/packages.config
+
+# Tabs Studio
+*.tss
+
+# Telerik's JustMock configuration file
+*.jmconfig
+
+# BizTalk build output
+*.btp.cs
+*.btm.cs
+*.odx.cs
+*.xsd.cs
+
+# OpenCover UI analysis results
+OpenCover/
+
+# Azure Stream Analytics local run output
+ASALocalRun/
+
+# MSBuild Binary and Structured Log
+*.binlog
+
+# NVidia Nsight GPU debugger configuration file
+*.nvuser
+
+# MFractors (Xamarin productivity tool) working folder
+.mfractor/
+
+# Local History for Visual Studio
+.localhistory/
+
+# BeatPulse healthcheck temp database
+healthchecksdb
+
+# Backup folder for Package Reference Convert tool in Visual Studio 2017
+MigrationBackup/
+
+# Ionide (cross platform F# VS Code tools) working folder
+.ionide/
+
+# Fody - auto-generated XML schema
+FodyWeavers.xsd
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Mono auto generated files
+mono_crash.*
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Mac
+.DS_Store
